# pf1

./: pyproject.toml  requirements.txt
CLEANING_PIPELINE/: clean_tavily.py  requirements.txt  sample_cleaner_demo.py  tavily_cleaner_prd.md
CLEANING_PIPELINE/Sample_raw_search results/: tavily_results_what_are_the_latest_news_from__20250411_152423.json
CLEANING_PIPELINE/tavily_cleaner/: __init__.py  cleaner.py  cli.py
Kevin/: 1.Overview Zoom Design Example.md  Future rubrik implementation.md  covert to png.py  gitdiagram.mmd  kickoff_query.txt  puppeteer-config.json
docs/: design- saved so can build more.md  design.md  gemini-oai-compatible-mode.md  openai_guidelines.md  requirements.md
output/: summary_CtHzxINcBfU_20250408_232933.html  summary_CtHzxINcBfU_20250408_234657.html  summary_CtHzxINcBfU_20250409_000409.html  summary_dKrJa2WaUGs_20250410_095730.html  summary_dQw4w9WgXcQ_20250410_081247.html  summary_kPL-6-9MVyA_20250410_154302.html  summary_kPL-6-9MVyA_20250410_160659.html  summary_kPL-6-9MVyA_20250410_164529.html  summary_srQwyArPnP8_20250410_113242.html  summary_srQwyArPnP8_20250410_113856.html  summary_yi1HBCfPbOo_20250410_074916.html  summary_zP2hWDAl1WI_20250408_192451.html  summary_zP2hWDAl1WI_20250408_193514.html
reports/: cost_report_20250410_154302.md  cost_report_20250410_160659.md  cost_report_20250410_162700.md  cost_report_20250410_163738.md  cost_report_20250410_164529.md
src/: main.py
src/nodes/: audience_wrapper_node.py  base_node.py  content_extraction_node.py  content_integration_node.py  cost_tracking_node.py  (+9 more)
(+33 files in other folders)
