[project]
name = "pf1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.9.0",
    "loguru>=0.7.3",
    "openai>=1.71.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "youtube-transcript-api>=1.0.3",
]
