[project]
name = "pf1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "google-genai>=1.9.0",
    "logfire>=3.14.0",
    "loguru>=0.7.3",
    "newspaper3k>=0.2.8",
    "openai>=1.71.0",
    "pydantic-ai>=0.0.55",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.1.0",
    "requests>=2.31.0",
    "tavily-python>=0.5.4",
    "trafilatura>=1.6.0",
    "youtube-transcript-api>=1.0.3",
]
